[package]
name = "genzero"
version = "0.2.1"
edition = "2021"
license = "MPL-2.0"
description = "genzero is a library that lets you get the latest value of a type."
homepage = "https://github.com/therishidesai/genzero"
repository = "https://github.com/therishidesai/genzero"
readme = "README.md"

[dependencies]
crossbeam-epoch = "0.9"

[dev-dependencies]
rand = "0.8.5"
